# loongsso

./: Makefile  Makefile.in  _config.h  configure  freebsd_install.sh  install.sh  loongSSO.txt  makefile.sh  passport.js  t.c  table.sql
conf/: loong_sso.xml
example/: callback.php  login.php  reg.html
include/: base.h  estring.h  evio_epoll.h  evio_kqueue.h  loong.h  loong_log.h  protocol.h  util.h
server/: hashmap.c  hashmap.h  mps.c  server.c  server.h  sock_epoll.c  sock_io.c  splice-tonet-new.c  splice_server.c
server/Multi-Process-Server/: hashmap.c  hashmap.h  mps.new.c  mps_new.c  mps_new.h  s.c
smartc/: Makefile.am  array.c  cache_control.c  cache_dir.c  cache_file.h  cache_index.c  cache_index.h  conf.c  config.h.in  fd_event.c  file_aio.h  file_posix_aio.c  hashtable.c  hashtable.h  http.h  http_header.c  http_header.h  log.h  md5.c  md5_test.c  rfc1123.c  server.c  server.h  sock_epoll.c  sock_epoll.h  string.c  string.h  tester.c
src/: estring.c  evio_epoll.c  evio_kqueue.c  hash.c  loong.c  loong_log.c  module.c  parse_conf.c  util.c
trunk/: Makefile  Makefile.in  _config.h  configure  install.sh  loongSSO.txt  t.c  test.c
trunk/conf/: loong_sso.xml
trunk/example/: callback.php  index.php  logout.php  php.php  reg.css  reg.html
trunk/include/: base.h  hash.h  loong.h  loong_log.h  module.h  parse_conf.h  sxml.h  util.h
trunk/server/: aiocp.c  hashmap.c  hashmap.h  mps.c  server.c  server.h  sock_epoll.c  sock_epoll.h  sock_io.c  sock_io.h  threadpool.c  多线程epoll.c
trunk/smartc/: Makefile.in  accesslog.c  accesslog.h  array.h  cache_control.h  cache_dir.h  cache_file.c  conf.h  config.h  fd_event.h  file_linux_aio.c  http.c  list.h  log.c  lua_api.c  lua_api.h  md5.h  smartc.conf.default  smartc.conf.lua  sock_io.c  sock_io.h
trunk/src/: evio_epoll.c  evio_kqueue.c  hash.c  loong.c  loong_log.c  loongsso_convert_data.c  module.c  protocol.c  (+2 more)
(+5 files in other folders)
